# video-games-data-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  READMEV2.md  TODO.md  docker-compose.yml  load_rawg_to_bigquery.ipynb  load_to_bigquery.ipynb  load_to_gcs.ipynb  main.py  profiles.yml.example  pyproject.toml  read_json_from_bigquery.ipynb
dbt/rawg_dbt/: dbt_project.yml
dbt/rawg_dbt/models/marts/: games_by_genre.sql  games_by_year.sql  genre_avg_rating.sql  genre_platform_distribution.sql  genre_popularity.sql  marts.yml
dbt/rawg_dbt/models/staging/: sources.yml  staging.yml  stg_game_genre.sql  (+4 more)
kestra/flows/: rawg_build_processed_tables.yml  rawg_dbt.yml  rawg_extract.yml  rawg_extract_to_gcs.yml  rawg_load.yml  rawg_pipeline.yml  rawg_process.yml
notebooks/: notebook_test_all_keys.ipynb  notebook_test_genres.ipynb  notebook_test_next_page_api.ipynb  notebook_test_platforms.ipynb  test_extract_gcs.ipynb
src/: main.py
src/extract/: extract_rawg_games.py  extract_rawg_games_gcs.py  extract_rawg_games_to_gcs.py  inspect_rawg.py  read_rawg_games.py  read_rawg_games_from_gcs.py  read_rawg_games_gcs.py
src/load/: load_pipeline.py  load_rawg_to_bigquery.py  load_to_bigquery.py  parse_rawg_raw.py
src/process/: process_rawg_games_to_parquet.py  process_rawg_to_parquet_gcs.py
src/transform/: game_genre.py  game_platform.py  games.py  genres.py  platforms.py
src/utils/: gcp.py  paths.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
testing/: get_rawg_platforms_df.py  get_rawg_stores_df.py  stores_and_platforms_analysis.ipynb
