[project]
name = "video-games-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "google-cloud-bigquery>=3.41.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
    "nbconvert>=7.17.1",
]
